test/runtime/fail/assignment/missing_expr.hy

// expect error: Expected operand in expression

let a =
